--- a/main.html
+++ b/main.html
@@ -10,6 +10,20 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<ul>
+	<li>
+		
+			<a href="https://course.acciojob.com/open-web-editor?question=fdaf31fe-5f40-4e25-bc00-0e5164e78513">
+				<img src-="https://course.acciojob.com/open-web-editor?question=fdaf31fe-5f40-4e25-bc00-0e5164e78513" alt="goldenretriver">
+			</a>
+		
+	</li>
+		<li>
+			<a href="https://course.acciojob.com/open-web-editor?question=fdaf31fe-5f40-4e25-bc00-0e5164e78513">
+				<img src="https://course.acciojob.com/open-web-editor?question=fdaf31fe-5f40-4e25-bc00-0e5164e78513" alt="poodle">
+				</a>
+		</li>
+	</ul>
 
 </body>
 
