--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
 	<ul>
 	<li>
 		
-			<a href="https://course.acciojob.com/open-web-editor?question=fdaf31fe-5f40-4e25-bc00-0e5164e78513">
-				<img src-="https://course.acciojob.com/open-web-editor?question=fdaf31fe-5f40-4e25-bc00-0e5164e78513" alt="goldenretriver">
+			<a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
+				<img src-="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="goldenretriver">
 			</a>
 		
 	</li>
 		<li>
-			<a href="https://course.acciojob.com/open-web-editor?question=fdaf31fe-5f40-4e25-bc00-0e5164e78513">
-				<img src="https://course.acciojob.com/open-web-editor?question=fdaf31fe-5f40-4e25-bc00-0e5164e78513" alt="poodle">
+			<a href="https://en.wikipedia.org/wiki/Poodle" target="_blank">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/Full_attention_%288067543690%29.jpg/1280px-Full_attention_%288067543690%29.jpg" alt="poodle">
 				</a>
 		</li>
 	</ul>
