--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 	<li>
 		
 			<a href="https://en.wikipedia.org/wiki/Golden_Retriever" target="_blank">
-				<img src-="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="goldenretriver">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/c/cf/BassetHound_profil.jpg" alt="goldenretriver">
 			</a>
 		
 	</li>
